# bcr-arm-control-fk-ai

./: .gitignore  INSTALL_WSL_UBUNTU.md  README.md  REPORT.md  requirements.venv.txt
bcr_ws/src/bcr_arm_description/: package.xml
bcr_ws/src/bcr_arm_gazebo/: CMakeLists.txt  README.md  package.xml
bcr_ws/src/bcr_arm_gazebo/config/: ros2_controllers.yaml
bcr_ws/src/bcr_arm_gazebo/data/: README.md  fk_dataset.csv
bcr_ws/src/bcr_arm_gazebo/launch/: bcr_arm.gazebo.launch.py
bcr_ws/src/bcr_arm_gazebo/models/: README.md  fk_mlp.pt  fk_mlp_metrics.json
bcr_ws/src/bcr_arm_gazebo/plots/: README.md  fk_prediction_examples.csv
bcr_ws/src/bcr_arm_gazebo/scripts/: compare_fk_streams.py  evaluate_fk_mlp.py  forward_kinematics.py  generate_fk_dataset.py  predict_fk_mlp.py  test_arm_movement.py  train_fk_mlp.py
bcr_ws/src/bcr_arm_gazebo/worlds/: empty.sdf
docs/: dh_notes.md  project_study_guide.md  report_todo.md  results_summary.md  tp3_requirements_summary.md  troubleshooting.md  validation_checklist.md
docs/media/: README.md
tools/: build_ws.sh  collect_screenshots_notes.md  env_check.sh  run_ai_training.sh  run_fk.sh  run_fk_comparison.sh  run_fk_predictor.sh  run_gazebo.sh  run_motion_test.sh  setup_venv.sh  source_ros.sh
